--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 06 18:05:28 COT 2021
-sdk.dir=C\:\\Users\\danis\\AppData\\Local\\Android\\Sdk
+#Sat Apr 10 09:33:12 COT 2021
+sdk.dir=C\:\\Users\\kevin andres\\AppData\\Local\\Android\\Sdk
