--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.Settings.EditPasswActivity" />
+        <activity android:name=".ui.Settings.EditCorreoActivity" />
         <activity android:name=".ui.Materia.GraciasActivity" />
         <activity android:name=".ui.Materia.ReseñaActivity" />
         <activity android:name=".ui.Materia.WarningActivity" />
