Revert "clase reseña"
This reverts commit 494ab2e63e62697b5451c16e2dd838ed1a3c8788.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,22 @@
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.Settings.EditPasswActivity" />
+        <activity android:name=".ui.Settings.EditCorreoActivity" />
+        <activity android:name=".ui.Materia.GraciasActivity" />
+        <activity android:name=".ui.Materia.ReseñaActivity" />
+        <activity android:name=".ui.Materia.WarningActivity" />
+        <activity android:name=".ui.Materia.MateriaActivity" />
         <activity android:name=".ui.SignUp.SignUp_Estudiante" />
         <activity android:name=".ui.SignUp.SignUp_Profesor_AgregarMateriasSuccess" />
         <activity android:name=".ui.SignUp.SignUp_Profesor_AgregarMaterias" />
         <activity android:name=".ui.SignUp.SignUp_Profesor" />
         <activity android:name=".ui.SignUp.SignUp" />
+        <activity android:name=".ui.Search.SearchActivity" />
+        <activity android:name=".ui.Search.Search_Materia" />
+        <activity android:name=".ui.Search.Search_Materia_Carrera" />
+        <activity android:name=".ui.Search.Search_Profesor" />
+        <activity android:name=".ui.Enroll.ConflictActivity" />
         <activity android:name=".ui.Enroll.EnrollActivity" />
         <activity android:name=".ui.MainActivity" />
         <activity
@@ -42,8 +53,8 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data android:scheme="@string/fb_login_protocol_scheme" />
